Bug fix for editor's note spacing

--- a/style.css
+++ b/style.css
@@ -670,6 +670,16 @@ body {
 }
 
 
+.post-519 div.entry-content p {
+	margin-top: 0em;
+	margin-bottom: 0;
+	text-indent: 1.4em;
+	line-height: 1.4 !important;
+}
+
+.post-519 div.entry-content p:first-of-type {
+	text-indent: 0;
+}
 
 
 .category-nonfiction .entry-content p {
